--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,10 @@ jobs:
         run: |
           pip install mkdocs-material
 
-      - name: Build and Deploy
+      - name: Build
         run: |
-          mkdocs gh-deploy --force
+          mkdocs build
+
+      - name: Deploy
+        run: |
+          mkdocs gh-deploy
