--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,6 @@ jobs:
         run: |
           pip install mkdocs-material
 
-      - name: Build
-        run: |
-          mkdocs build
-
-      - name: Deploy
+      - name: Build and Deploy
         run: |
           mkdocs gh-deploy --force
