--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Use the secret token
         run: |
-          mkdocs gh-deploy --force --token $GH_TOKEN
+          mkdocs gh-deploy --force 
