--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main  # Runs when you push to the main branch
 
+permissions:
+  contents: write  # Allow pushing to gh-pages branch
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -21,12 +24,6 @@ jobs:
         run: |
           pip install mkdocs-material
 
-      - name: Build the Site
-        run: |
-          mkdocs build
-
       - name: Deploy to GitHub Pages
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Use the secret token
         run: |
-          mkdocs gh-deploy --force 
+          mkdocs gh-deploy --force
